Reduce list width to 50% to prevent date column overlap
Lists now span 25-75% of page width, leaving clear space
for dates positioned at 80-100% on the right side.
Remove ineffective margin-right.

--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -87,10 +87,9 @@ p code {
 ul {
 	position: relative;
 	left: 25%;
-	width: 65%;
+	width: 50%;
 	margin-bottom: 0.3em;
 	margin-top: -0.5em;
-	margin-right: 15%;
 }
 
 /*uncomment to get dashes in the list*/
